--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^2.5.2",
         "vue-axios": "^2.1.5",
         "vue-bus": "^1.2.1",
+        "vue-i18n": "^8.15.0",
         "vue-router": "^3.0.1"
     },
     "devDependencies": {
