--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "bootstrap3": "^3.3.5",
         "element-ui": "^2.12.0",
         "jquery": "^3.4.1",
+        "less": "^3.10.3",
+        "less-loader": "^5.0.0",
         "qs": "^6.9.0",
         "vue": "^2.5.2",
         "vue-axios": "^2.1.5",
