--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "babel-polyfill": "^6.26.0",
         "bootstrap3": "^3.3.5",
         "element-ui": "^2.12.0",
         "font-awesome-sass": "^4.7.0",
