--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build": "node build/build.js"
     },
     "dependencies": {
+        "@babel/polyfill": "^7.8.3",
         "axios": "^0.19.0",
         "babel-polyfill": "^6.26.0",
         "bootstrap3": "^3.3.5",
